--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^7.1.0",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
